# bitvek

./: Cargo.toml  README.md
src/: bitwise.rs  buffer.rs  clone.rs  conversion.rs  convert.rs  eq.rs  extend.rs  fmt.rs  hash.rs  index.rs  iter.rs  lib.rs  macros.rs  primitive.rs  serde.rs
src/bitwise/: and.rs  not.rs  or.rs  xor.rs
