[package]
name = "bitvek"
version = "0.3.1"
edition = "2021"
authors = ["Lingxuan Ye <love@lingxuan.io>"]
categories = ["data-structures"]
repository = "https://github.com/Lingxuan-Ye/bitvek"
readme = "README.md"
license = "MIT"
description = "A simple bit vector implementation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
