[package]
name = "bitvek"
version = "0.3.6"
edition = "2024"
authors = ["Lingxuan Ye <love@lingxuan.io>"]
categories = ["data-structures", "no-std"]
repository = "https://github.com/Lingxuan-Ye/bitvek"
readme = "README.md"
license = "MIT"
description = "A simple bit vector implementation."

[dependencies.serde]
version = "1.0.219"
default-features = false
features = ["alloc"]
optional = true

[features]
default = ["serde"]
serde = ["dep:serde"]
